--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Blog de recetas de comida">
+    <meta name="keywords" content="Comida, dulce, salado, blog">
+    <meta name="author" content="Santamarina Andrés">
+    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/128/685/685352.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Blog de Recetas</title>
   </head>
   <body>
     <div id="root"></div>
